[Departement] add departement feature (#7)
* feat(app): add departement routes

* feat(departement): add http handler departement

* docs: add API Spec departement

* feat(app): add domain factory departement

* feat(departement): add repository handler departement

* imprv: validate req based on tag name instead of field name

* feat(departement): departement migration schema

* feat(departement): departements table representation

* feat(departement): departement request DTO

* feat(departement): departement response DTO

* feat(departement): add service handler departement

* feat(departement): departement mocks

* feat(departement): add departement service test
